fix input overflow in ie11

--- a/src/tabs/Home/Home.scss
+++ b/src/tabs/Home/Home.scss
@@ -35,6 +35,7 @@ form[name="createNews"] {
 	input[type="text"],
 	textarea {
 		flex:0 0 85%;
+		max-width:85%;
 	}
 
 	textarea {
